# nix-secrets

./: Cargo.toml  default.nix  flake.nix  modules.nix  packages.nix
src/: generate.rs  main.rs
