[package]
name = "secrets-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
age = { version = "0.11.2", features = ["armor", "cli-common", "ssh"] }
age-core = "0.11.0"
anyhow = "1.0.100"
base16ct = { version = "1.0.0", features = ["alloc"] }
camino = { version = "1.2.2", features = ["serde1"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
clap-stdin = "0.8.0"
command-fds = "0.3.2"
digest = "0.10.7"
edit = "0.1.5"
git2 = "0.20.3"
memfile = "0.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sha2 = "0.10.9"
shlex = "1.3.0"
skim = "0.20.5"
topo_sort = "0.4.0"
url = { version = "2.5.7", features = ["serde"] }
walkdir = "2.5.0"
